# CUDA_mnist

./: .gitignore  CMakeLists.txt  Makefile  README  cmake_install.cmake  dataset.cpp  dataset.h  kernels.cu  kernels.h  mkplot.py  mnist.cu  mnist.h  mult.cu  primer.cu  utils.cu  utils.h
